RESOLVED FIXED43058
Would like a way to make the web process crash at random times for testing purposes
https://bugs.webkit.org/show_bug.cgi?id=43058
Summary Would like a way to make the web process crash at random times for testing pu...
Adam Roben (:aroben)
Reported 2010-07-27 10:40:07 PDT
It would be useful to be able to put the web process into a mode where it would crash at a random time. This could help us find cases where the UI process doesn't handle a web process crash correctly, such as bug 43049.
Attachments
Add a way to cause the web process to crash at a random time (2.84 KB, patch)
2010-09-08 13:59 PDT, Adam Roben (:aroben)
darin: review+
Adam Roben (:aroben)
Comment 1 2010-07-27 10:40:36 PDT
Adam Barth
Comment 2 2010-07-27 11:45:00 PDT
In Chrome, we use the about:crash URL to trigger these conditions. That has the nice property that it's not accessible from web content.
Adam Roben (:aroben)
Comment 3 2010-09-08 13:59:20 PDT
Created attachment 66937 [details] Add a way to cause the web process to crash at a random time
Darin Adler
Comment 4 2010-09-08 14:03:26 PDT
Comment on attachment 66937 [details] Add a way to cause the web process to crash at a random time It seems to me that a reproducible pseudo-random sequence is better than a higher quality random number for this purpose.
Adam Roben (:aroben)
Comment 5 2010-09-08 14:25:29 PDT
(In reply to comment #4) > (From update of attachment 66937 [details]) > It seems to me that a reproducible pseudo-random sequence is better than a higher quality random number for this purpose. I filed bug 45414 about this.
Adam Roben (:aroben)
Comment 6 2010-09-08 14:28:00 PDT
Note You need to log in before you can comment on or make changes to this bug.